# shadow

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
examples/: shadow_demo.rs  web_demo.rs
ows-private/: Cargo.toml
ows-private/src/: agent.rs  error.rs  lib.rs
ows-private/src/aztec/: mod.rs
ows-private/src/policy/: mod.rs
ows-private/src/stealth/: derive.rs  keys.rs  mod.rs  scan.rs
shadow-wallet/: Cargo.toml
shadow-wallet/src/: evm.rs  keystore.rs  main.rs  mock_ows.rs  ows_client.rs  policy_exec.rs
