[workspace]
resolver = "2"
members = ["ows-private", "shadow-wallet"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/shadow-wallet"

[workspace.dependencies]
k256 = { version = "0.13", features = ["ecdsa", "arithmetic", "ecdh"] }
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
axum = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
alloy = { version = "1", features = ["full"] }
