[package]
name = "ows-private"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Privacy extension for Open Wallet Standard — stealth addresses + private agent"

[dependencies]
k256.workspace = true
sha2.workspace = true
sha3.workspace = true
hkdf.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true
rand.workspace = true
reqwest.workspace = true
tokio.workspace = true
axum.workspace = true
tokio-stream.workspace = true

[[example]]
name = "shadow_demo"
path = "../examples/shadow_demo.rs"

[[example]]
name = "web_demo"
path = "../examples/web_demo.rs"
