[package]
name = "shadow-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for shadow-wallet — private stealth address layer for OWS"

[[bin]]
name = "shadow-wallet"
path = "src/main.rs"

[dependencies]
ows-private = { path = "../ows-private" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
hex.workspace = true
dirs.workspace = true
axum.workspace = true
sha2.workspace = true
alloy.workspace = true
